Profile & Activity Pages

--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
     <script src="js/MediaCtrl.js"></script>
     <script src="js/FindUsCtrl.js"></script>
     <script src="js/HomeCtrl.js"></script>
+    <script type="text/javascript" src="js/SettingsCtrl.js"></script>
      <script src="js/services.js"></script>
   </head>
 
