--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
           <ion-tab ng-click="GoTo('app.home')" title="Home" icon-on="ion-home" icon-off="ion-home"></ion-tab>
           <ion-tab ng-click="GoTo('app.request', {type : 'order'})" title="About" icon-on="ion-clipboard" icon-off="ion-clipboard"></ion-tab>
           <ion-tab ng-click="GoTo('app.request', {type : 'technical'})" title="Settings" icon-on="ion-settings" icon-off="ion-settings"></ion-tab>
-          <ion-tab ng-click="GoTo('app.request', {type : 'design'})" title="Settings" icon-on="ion-settings" icon-off="ion-paintbrush"></ion-tab>
+          <ion-tab ng-click="GoTo('app.request', {type : 'design'})" title="Settings" icon-on="ion-paintbrush" icon-off="ion-paintbrush"></ion-tab>
           <ion-tab ng-click="GoTo('app.request', {type : 'account'})" title="Settings" icon-on="ion-settings" icon-off="ion-help-circled"></ion-tab>
 
         </ion-tabs>
