--- a/www/index.html
+++ b/www/index.html
@@ -40,7 +40,7 @@
   <body ng-app="starter">
     <ion-nav-view>
 
-        <i class="ion-ios-gear gear" ng-click="Settings()" ng-show="ShowTabs"></i>
+        <i class="ion-ios-gear gear" ng-click="Settings()" ng-show="LoggedIn"></i>
 
         <ion-tabs class="tabs-positive tabs-icon-only" ng-show="ShowTabs">
 
