--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,7 @@
 
         <i class="ion-ios-gear gear" ng-click="Settings()" ng-show="LoggedIn"></i>
 
-        <ion-tabs class="tabs-positive tabs-icon-only" ng-show="ShowTabs">
+        <ion-tabs class="tabs-positive tabs-icon-only" ng-show="ShowTabs && !GameOn">
 
           <ion-tab ng-click="GoTo('app.home')" title="Home" icon-on="ion-home" icon-off="ion-home"></ion-tab>
           <ion-tab ng-click="GoTo('app.request', {type : 'order'})" title="About" icon-on="ion-clipboard" icon-off="ion-clipboard"></ion-tab>
