--- a/www/index.html
+++ b/www/index.html
@@ -44,11 +44,11 @@
 
         <ion-tabs class="tabs-positive tabs-icon-only" ng-show="ShowTabs && !GameOn">
 
-          <ion-tab ng-click="GoTo('app.home')" title="Home" icon-on="ion-home" icon-off="ion-home"></ion-tab>
-          <ion-tab ng-click="GoTo('app.request', {type : 'order'})" title="About" icon-on="ion-clipboard" icon-off="ion-clipboard"></ion-tab>
-          <ion-tab ng-click="GoTo('app.request', {type : 'technical'})" title="Settings" icon-on="ion-settings" icon-off="ion-settings"></ion-tab>
-          <ion-tab ng-click="GoTo('app.request', {type : 'design'})" title="Settings" icon-on="ion-paintbrush" icon-off="ion-paintbrush"></ion-tab>
-          <ion-tab ng-click="GoTo('app.request', {type : 'account'})" title="Settings" icon-on="ion-settings" icon-off="ion-help-circled"></ion-tab>
+          <ion-tab ng-click="GoTo('app.home')" title="Home" icon-on="ion-home" icon-off="ion-home" ng-class="{'tab-item-active': isActive('home')}"></ion-tab>
+          <ion-tab ng-click="GoTo('app.request', {type : 'order'})" title="About" icon-on="ion-clipboard" icon-off="ion-clipboard" ng-class="{'tab-item-active': isActive('order')}"></ion-tab>
+          <ion-tab ng-click="GoTo('app.request', {type : 'technical'})" title="Settings" icon-on="ion-settings" icon-off="ion-settings" ng-class="{'tab-item-active': isActive('technical')}"></ion-tab>
+          <ion-tab ng-click="GoTo('app.request', {type : 'design'})" title="Settings" icon-on="ion-paintbrush" icon-off="ion-paintbrush" ng-class="{'tab-item-active': isActive('design')}"></ion-tab>
+          <ion-tab ng-click="GoTo('app.request', {type : 'account'})" title="Settings" icon-on="ion-settings" icon-off="ion-help-circled" ng-class="{'tab-item-active': isActive('account')}"></ion-tab>
 
         </ion-tabs>
 
