--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,9 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
+      <!-IE FIxes-->
+     <script src="js/wp8fixes.js"></script> 
+      
     <!-- ionic/angularjs js -->
     <script type="text/javascript" src="lib/jquery-2.1.4.min.js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
