--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,7 @@
 
         <i class="ion-ios-gear gear" ng-click="Settings()" ng-show="LoggedIn"></i>
 
-        <ion-tabs class="tabs-positive tabs-icon-only" ng-show="ShowTabs && !GameOn">
+        <ion-tabs class="tabs-positive tabs-icon-only _jsBottomTabs" ng-show="ShowTabs && !GameOn">
 
           <ion-tab class="bottomTab" ng-click="GoTo('app.home')" title="Home" icon-on="ion-home" icon-off="ion-home" ng-class="{'tab-item-active': isActive('home')}"></ion-tab>
           <ion-tab class="bottomTab order" ng-click="GoTo('app.request', {type : 'order'})" title="About" icon-on="ion-clipboard" icon-off="ion-clipboard" ng-class="{'tab-item-active': isActive('order')}"></ion-tab>
