--- a/www/index.html
+++ b/www/index.html
@@ -47,11 +47,11 @@
 
         <ion-tabs class="tabs-positive tabs-icon-only _jsBottomTabs" ng-show="ShowTabs && !GameOn">
 
-          <ion-tab class="bottomTab" ng-click="GoTo('app.home')" title="Home" icon-on="ion-home" icon-off="ion-home" ng-class="{'tab-item-active': isActive('home')}"></ion-tab>
-          <ion-tab class="bottomTab order" ng-click="GoTo('app.request', {type : 'order'})" title="About" icon-on="ion-clipboard" icon-off="ion-clipboard" ng-class="{'tab-item-active': isActive('order')}"></ion-tab>
-          <ion-tab class="bottomTab technical" ng-click="GoTo('app.request', {type : 'technical'})" title="Settings" icon-on="ion-settings" icon-off="ion-settings" ng-class="{'tab-item-active': isActive('technical')}"></ion-tab>
-          <ion-tab class="bottomTab design" ng-click="GoTo('app.request', {type : 'design'})" title="Settings" icon-on="ion-paintbrush" icon-off="ion-paintbrush" ng-class="{'tab-item-active': isActive('design')}"></ion-tab>
-          <ion-tab class="bottomTab account" ng-click="GoTo('app.request', {type : 'account'})" title="Settings" icon-on="ion-settings" icon-off="ion-help-circled" ng-class="{'tab-item-active': isActive('account')}"></ion-tab>
+          <ion-tab class="bottomTab" ng-click="GoTo('app.home', {}, '/app/home/')" title="Home" icon-on="ion-home" icon-off="ion-home" ng-class="{'tab-item-active': isActive('home')}"></ion-tab>
+          <ion-tab class="bottomTab order" ng-click="GoTo('app.request', {type : 'order'}, '/app/home/')" title="About" icon-on="ion-clipboard" icon-off="ion-clipboard" ng-class="{'tab-item-active': isActive('order'), '/app/home/'}"></ion-tab>
+          <ion-tab class="bottomTab technical" ng-click="GoTo('app.request', {type : 'technical'}, '/app/home/')" title="Settings" icon-on="ion-settings" icon-off="ion-settings" ng-class="{'tab-item-active': isActive('technical')}"></ion-tab>
+          <ion-tab class="bottomTab design" ng-click="GoTo('app.request', {type : 'design'}, '/app/home/')" title="Settings" icon-on="ion-paintbrush" icon-off="ion-paintbrush" ng-class="{'tab-item-active': isActive('design')}"></ion-tab>
+          <ion-tab class="bottomTab account" ng-click="GoTo('app.request', {type : 'account'}, '/app/home/')" title="Settings" icon-on="ion-settings" icon-off="ion-help-circled" ng-class="{'tab-item-active': isActive('account')}"></ion-tab>
 
         </ion-tabs>
 
