--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,7 @@
   <body ng-app="starter">
     <ion-nav-view>
 
-        <i class="ion-ios-gear gear" ng-click="Settings()" ng-show="LoggedIn"></i>
+        <i class="ion-ios-gear gear" ng-click="Settings()" ng-show="LoggedIn && ShowTabs"></i>
 
         <ion-tabs class="tabs-positive tabs-icon-only _jsBottomTabs" ng-show="ShowTabs && !GameOn">
 
