--- a/www/index.html
+++ b/www/index.html
@@ -48,7 +48,7 @@
 
         <ion-tabs class="tabs-positive tabs-icon-only _jsBottomTabs" ng-show="ShowTabs && !GameOn && !IsWindows">
 
-          <ion-tab class="bottomTab" ng-click="GoTo('app.home', {}, '/app/home/')" title="Home" icon-on="ion-home" icon-off="ion-home" ng-class="{'tab-item-active': isActive('home')}"></ion-tab>
+          <ion-tab class="bottomTab home" ng-click="GoTo('app.home', {}, '/app/home/')" title="Home" icon-on="ion-home" icon-off="ion-home" ng-class="{'tab-item-active': isActive('home')}"></ion-tab>
           <ion-tab class="bottomTab order" ng-click="GoTo('app.request', {type : 'order'}, '/app/home/')" title="About" icon-on="ion-clipboard" icon-off="ion-clipboard" ng-class="{'tab-item-active': isActive('order'), '/app/home/'}"></ion-tab>
           <ion-tab class="bottomTab technical" ng-click="GoTo('app.request', {type : 'technical'}, '/app/home/')" title="Settings" icon-on="ion-settings" icon-off="ion-settings" ng-class="{'tab-item-active': isActive('technical')}"></ion-tab>
           <ion-tab class="bottomTab design" ng-click="GoTo('app.request', {type : 'design'}, '/app/home/')" title="Settings" icon-on="ion-paintbrush" icon-off="ion-paintbrush" ng-class="{'tab-item-active': isActive('design')}"></ion-tab>
