--- a/www/index.html
+++ b/www/index.html
@@ -46,7 +46,7 @@
 
         <i class="ion-ios-gear gear" ng-click="Settings()" ng-show="LoggedIn && ShowTabs && !GameOn"></i>
 
-        <ion-tabs class="tabs-positive tabs-icon-only _jsBottomTabs" ng-show="ShowTabs && !GameOn && !IsWindows">
+        <ion-tabs class="tabs-positive tabs-icon-only _jsBottomTabs" ng-show="ShowTabs && !GameOn && !IsWindows" style="bottom: 100px;">
 
 
           <ion-tab class="bottomTab home" ng-click="GoTo('app.home', {}, '/app/home/')" title="Home" icon-on="ion-home" icon-off="ion-home" ng-class="{'tab-item-active': isActive('home')}"></ion-tab>
