--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
 
       <!-IE Fixes-->
      <script src="js/wp8fixes.js"></script> 
-     <!-- <script src="js/select-directive.js"></script> -->
+    <script src="js/select-directive.js"></script>
       
     <!-- ionic/angularjs js -->
     <script type="text/javascript" src="lib/jquery-2.1.4.min.js"></script>
