--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
-      <!-IE Fixes-->
+      <!--IE Fixes-->
      <script src="js/wp8fixes.js"></script> 
     <script src="js/select-directive.js"></script>
       
